Rename Index.html to index.html for GitHub Pages

--- a/Index.html
+++ b/Index.html
@@ -59,7 +59,7 @@
             <p class="click-hint">Click Me! 💕</p>
         </div>
 
-        <!-- Fireworks container (hidden initially) -->
+        <!-- Fireworks container (hidden initially) to the surprice screen-->
         <div id="fireworksContainer" class="fireworks-container"></div>
     </div>
 
